# backend/routes/Router.js
@@ -6,8 +6,10 @@ const superadminRoutes = require('../routes/Superadmin'); // Assuming your admin
 const vendorRoutes = require('../routes/Vendors'); // Assuming your admin routes are in vendorRoutes.js
 const categoryRoutes = require('../routes/Category'); // Assuming your admin routes are in categoryRoutes.js
 const subcategoryRoutes = require('../routes/Subcategory'); // Assuming your admin routes are in subcategoryRoutes.js
+const subSubCatgoryRoutes = require('../routes/SubSubCatgory'); // Assuming your admin routes are in subSubCatgoryRoutes.js
 // const productRoutes = require('../routes/Product'); // Assuming your admin routes are in productRoutes.js
 const electronicRoutes = require('../routes/Electronics'); // Assuming your admin routes are in electronicRoutes.js
+const fashionRoutes = require('../routes/Fashion'); // Assuming your admin routes are in fashionRoutes.js
 const mobilesRoutes = require('../routes/Mobile'); // Assuming your admin routes are in mobilesRoutes.js
 const reviewRoutes = require('../routes/Review'); // Assuming your admin routes are in reviewRoutes.js
 const cartRoutes = require('../routes/Cart'); // Assuming your admin routes are in cartRoutes.js
@@ -16,29 +18,20 @@ const addressRoutes = require('../routes/Address'); // Assuming your admin route
 const orderRoutes = require('../routes/Order'); // Assuming your admin routes are in addressRoutes.js
 
 
-// SuperAdmin routes
-router.use('/SuperAdmin', superadminRoutes);
-//vendor  Routes
-router.use('/Vendor', vendorRoutes);
-//Category  Routes
-router.use('/Category', categoryRoutes);
-//SubCategory  Routes
-router.use('/SubCategory', subcategoryRoutes);
-//Product  Routes
-// router.use('/Product', productRoutes);
-//Electronic  Routes
-router.use('/Electronic', electronicRoutes);
-//Mobiles  Routes
-router.use('/Mobiles', mobilesRoutes);
-//Review  Routes
-router.use('/Review', reviewRoutes);
-//user  Routes
-router.use('/User', userRoutes);
-//Cart  Routes
-router.use('/Cart', cartRoutes);
-//Address Routes
-router.use('/Address', addressRoutes);
-//Order Routes
-router.use('/Order', orderRoutes);
+
+router.use('/SuperAdmin', superadminRoutes);// SuperAdmin routes
+router.use('/Vendor', vendorRoutes);//vendor  Routes
+router.use('/Category', categoryRoutes);//Category  Routes
+router.use('/SubCategory', subcategoryRoutes);//SubCategory  Routes
+router.use('/SubSubCatgory', subSubCatgoryRoutes);//SubSubCatgory  Routes
+router.use('/Electronic', electronicRoutes);//Electronic  Routes
+router.use('/Fashion', fashionRoutes);//fashion Routes 
+router.use('/Mobiles', mobilesRoutes);//Mobiles  Routes
+router.use('/Review', reviewRoutes);//Review  Routes
+router.use('/User', userRoutes);//user  Routes
+router.use('/Cart', cartRoutes);//Cart  Routes
+router.use('/Address', addressRoutes);//Address Routes
+router.use('/Order', orderRoutes);//Order Routes
+// router.use('/Product', productRoutes); //Product  Routes
 
 module.exports = router;
